# wgpuEngineSample

./: CMakeLists.txt  LICENSE  README.md  script.js  shell.html  wgpuengine.module.js
.github/workflows/: static.yml
bindings/: bindings.idl  embind_bindings.cpp  wrapper.cpp
data/shaders/: mesh_includes.wgsl  mesh_pbr.wgsl  mesh_pbr_skinning.wgsl
src/: main.cpp  sample_project.cpp
src/engine/: sample_engine.cpp  sample_engine.h
src/graphics/: sample_renderer.cpp  sample_renderer.h
www/: index.html  index.js  lexgui.module.js  mesh_forward_custom.wgsl  script.js  test.hdr  wgpuengine.module.js
